[package]
name = "fusionsolar-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0.130"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.6", features = ["json", "cookies"]}
prometheus = "0.13.0"
http = "0.2.5"
log = "0.4.14"
env_logger = "0.9.0"
rocket = "0.5.0-rc.1"
config = "0.11.0"
num = "0.3"
num-traits = "0.2.14"
num-derive = "0.3.3"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }